Fix overflowing frame
The large PGP key frame causes the about page to overflow
horizontally, breaking the mobile nav. This commit fixes this
problem.

--- a/src/assets/styles/components/_frame.scss
+++ b/src/assets/styles/components/_frame.scss
@@ -1,5 +1,6 @@
 .frame {
     width: max-content;
+    max-width: 100%;
     padding: 1rem;
     border: 1px solid #ddd;
     margin: 1rem 0;
